--- a/index.html
+++ b/index.html
@@ -68,7 +68,20 @@
                     </div>
                 </div>
 
-                <!-- Card 3: Placeholder for another infographic -->
+                <!-- Card 3: Growth & Opportunities _ Semi 2025 Infographic -->
+                <div class="card rounded-2xl flex flex-col">
+                    <div class="p-8 flex-grow">
+                        <h2 class="text-2xl font-bold text-white">Growth & Opportunities: Semi 2025 </h2>
+                        <p class="mt-3 text-slate-400">Navigating the Next Wave of Growth: A Visual Report on Key Trends, Players, and Investment Opportunities.</p>
+                    </div>
+                    <div class="p-6 bg-slate-800 rounded-b-2xl">
+                        <a href="./semi-growthopp.html" class="inline-block w-full text-center bg-accent text-white font-bold py-3 px-6 rounded-lg hover:bg-blue-500 transition-colors duration-300">
+                            View Infographic
+                        </a>
+                    </div>
+                </div>
+                
+                <!-- Card 4: Placeholder for another infographic -->
                 <div class="card rounded-2xl flex flex-col">
                     <div class="p-8 flex-grow">
                         <h2 class="text-2xl font-bold text-white">Advances in AI Drug Discovery</h2>
