--- a/index.html
+++ b/index.html
@@ -54,21 +54,7 @@
                     </div>
                 </div>
 
-                <!-- Card 2: Rise of AI Security Agent -->
-                <div class="card rounded-2xl flex flex-col">
-                    <div class="p-8 flex-grow">
-                        <h2 class="text-2xl font-bold text-white">Rise of AI Security Agent</h2>
-                        <p class="mt-3 text-slate-400">The AI security agent market is on a trajectory of rapid expansion, driven by the escalating sophistication of cyber threats and a persistent global cybersecurity skills shortage.</p>
-                    </div>
-                    <div class="p-6 bg-slate-800 rounded-b-2xl">
-                   <!--     <a href="RiseOfAISecurityAgent.html" class="inline-block w-full text-center bg-slate-600 text-slate-400 font-bold py-3 px-6 rounded-lg cursor-not-allowed"> -->
-                        <a href="RiseOfAISecurityAgent.html" class="inline-block w-full text-center bg-accent text-white font-bold py-3 px-6 rounded-lg hover:bg-blue-500 transition-colors duration-300">
-                            View Infographic
-                        </a>
-                    </div>
-                </div>
-
-                <!-- Card 3: Growth & Opportunities _ Semi 2025 Infographic -->
+                <!-- Card 2: Growth & Opportunities _ Semi 2025 Infographic -->
                 <div class="card rounded-2xl flex flex-col">
                     <div class="p-8 flex-grow">
                         <h2 class="text-2xl font-bold text-white">Growth & Opportunities: Semi 2025 </h2>
@@ -80,8 +66,35 @@
                         </a>
                     </div>
                 </div>
+
+                <!-- Card 3: Silicon IP Ecosystem research Infographic -->
+                <div class="card rounded-2xl flex flex-col">
+                    <div class="p-8 flex-grow">
+                        <h2 class="text-2xl font-bold text-white">Silicon IP Ecosystem </h2>
+                        <p class="mt-3 text-slate-400">A Strategic Analysis of Silicon IP Ecosystem: Key Players, Design Impacts, Future Trends, and Investment Opportunities.</p>
+                    </div>
+                    <div class="p-6 bg-slate-800 rounded-b-2xl">
+                        <a href="./Silicon_IPs.html" class="inline-block w-full text-center bg-accent text-white font-bold py-3 px-6 rounded-lg hover:bg-blue-500 transition-colors duration-300">
+                            View Infographic
+                        </a>
+                    </div>
+                </div>
                 
-                <!-- Card 4: Placeholder for another infographic -->
+                <!-- Card 4: Rise of AI Security Agent -->
+                <div class="card rounded-2xl flex flex-col">
+                    <div class="p-8 flex-grow">
+                        <h2 class="text-2xl font-bold text-white">Rise of AI Security Agent</h2>
+                        <p class="mt-3 text-slate-400">A Competitive Analysis of Key Players, Market Trends, and Strategic Positioning of AI security agent market, which is on a trajectory of rapid expansion, driven by the escalating sophistication of cyber threats and a persistent global cybersecurity skills shortage.</p>
+                    </div>
+                    <div class="p-6 bg-slate-800 rounded-b-2xl">
+                   <!--     <a href="RiseOfAISecurityAgent.html" class="inline-block w-full text-center bg-slate-600 text-slate-400 font-bold py-3 px-6 rounded-lg cursor-not-allowed"> -->
+                        <a href="RiseOfAISecurityAgent.html" class="inline-block w-full text-center bg-accent text-white font-bold py-3 px-6 rounded-lg hover:bg-blue-500 transition-colors duration-300">
+                            View Infographic
+                        </a>
+                    </div>
+                </div>
+                
+                <!-- Card 5: Placeholder for another infographic -->
                 <div class="card rounded-2xl flex flex-col">
                     <div class="p-8 flex-grow">
                         <h2 class="text-2xl font-bold text-white">Advances in AI Drug Discovery</h2>
