--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </div>
                 </div>
 
-                <!-- Card 2: Growth & Opportunities _ Semi 2025 Infographic -->
+                <!-- Card 2: Growth & Opportunities_Semi 2025 Infographic -->
                 <div class="card rounded-2xl flex flex-col">
                     <div class="p-8 flex-grow">
                         <h2 class="text-2xl font-bold text-white">Growth & Opportunities: Semi 2025 </h2>
@@ -74,7 +74,7 @@
                         <p class="mt-3 text-slate-400">A Strategic Analysis of Silicon IP Ecosystem: Key Players, Design Impacts, Future Trends, and Investment Opportunities.</p>
                     </div>
                     <div class="p-6 bg-slate-800 rounded-b-2xl">
-                        <a href="./Silicon_IPs.html" class="inline-block w-full text-center bg-accent text-white font-bold py-3 px-6 rounded-lg hover:bg-blue-500 transition-colors duration-300">
+                        <a href="./silicon-IPs.html" class="inline-block w-full text-center bg-accent text-white font-bold py-3 px-6 rounded-lg hover:bg-blue-500 transition-colors duration-300">
                             View Infographic
                         </a>
                     </div>
