--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     </div>
                     <div class="p-6 bg-slate-800 rounded-b-2xl">
                         <a href="./semi-growthopp.html" class="inline-block w-full text-center bg-accent text-white font-bold py-3 px-6 rounded-lg hover:bg-blue-500 transition-colors duration-300">
-                            View Infographic
+                            View Presentation
                         </a>
                     </div>
                 </div>
