Update image URLs to stable placeholders
Replaced unstable googleusercontent URLs with stable placehold.co URLs for images.

--- a/silicon-IPs.html
+++ b/silicon-IPs.html
@@ -541,7 +541,7 @@ body {
         <p class="subtitle">The Essential Building Blocks of the Semiconductor Industry</p>
     </div>
     <!-- Applying the background image to the slide container -->
-    <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-image: linear-gradient(rgba(13, 17, 23, 0.7), rgba(13, 17, 23, 1)), url('http://googleusercontent.com/image_collection/image_retrieval/9131590690997014727'); background-size: cover; background-position: center; z-index: 0; opacity: 0.8;"></div>
+    <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-image: linear-gradient(rgba(13, 17, 23, 0.7), rgba(13, 17, 23, 1)), url('[https://placehold.co/1280x720/000000/FFFFFF?text=Semiconductor+Wafer](https://placehold.co/1280x720/000000/FFFFFF?text=Semiconductor+Wafer)'); background-size: cover; background-position: center; z-index: 0; opacity: 0.8;"></div>
 </div>
 
 <!-- Slide 2: Executive Summary -->
@@ -654,9 +654,9 @@ body {
                 </ul>
             </div>
             <div>
-                <!-- Using the image from the image retrieval -->
+                <!-- FIXED: Replaced googleusercontent URL with a stable placehold.co URL -->
                 <div class="image-wrapper" style="height: 450px;">
-                    <img src="http://googleusercontent.com/image_collection/image_retrieval/11875575924405242721" alt="Semiconductor Ecosystem Diagram">
+                    <img src="[https://placehold.co/600x450/1a1f26/f0f0f0?text=Semiconductor+Ecosystem](https://placehold.co/600x450/1a1f26/f0f0f0?text=Semiconductor+Ecosystem)\n(IP+Vendors,+EDA,+Fabless,+Foundries)" alt="Semiconductor Ecosystem Diagram">
                 </div>
             </div>
         </div>
@@ -774,9 +774,9 @@ body {
                 </ul>
             </div>
             <div>
-                <!-- Using the image from the image retrieval -->
+                <!-- FIXED: Replaced googleusercontent URL with a stable placehold.co URL -->
                 <div class="image-wrapper" style="height: 450px;">
-                    <img src="http://googleusercontent.com/image_collection/image_retrieval/11977593927983042556" alt="Close-up of server memory modules and circuit board lanes">
+                    <img src="[https://placehold.co/600x450/1a1f26/f0f0f0?text=High-Speed+Interface+IP](https://placehold.co/600x450/1a1f26/f0f0f0?text=High-Speed+Interface+IP)\n(PCIe,+HBM,+SerDes)" alt="Close-up of server memory modules and circuit board lanes">
                 </div>
             </div>
         </div>
@@ -896,8 +896,8 @@ body {
 <!-- Slide 15: TakeAway & Q&A -->
 <div class="slide-container" id="slide15">
     <div class="qa-layout">
-        <!-- Re-using the title slide image for a nice visual bookend -->
-        <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-image: linear-gradient(rgba(13, 17, 23, 0.8), rgba(13, 17, 23, 1)), url('http://googleusercontent.com/image_collection/image_retrieval/9131590690997014727'); background-size: cover; background-position: center; z-index: 0; opacity: 0.5;"></div>
+        <!-- FIXED: Replaced googleusercontent URL with a stable placehold.co URL -->
+        <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-image: linear-gradient(rgba(13, 17, 23, 0.8), rgba(13, 17, 23, 1)), url('[https://placehold.co/1280x720/000000/FFFFFF?text=Semiconductor+Wafer](https://placehold.co/1280x720/000000/FFFFFF?text=Semiconductor+Wafer)'); background-size: cover; background-position: center; z-index: 0; opacity: 0.5;"></div>
         
         <h2>TakeAway</h2>
         <p>The Silicon IP market is a high-margin, indispensable "tollbooth" on the semiconductor superhighway. Its growth is locked to the industry's biggest drivers: <strong>AI, Automotive, and Chiplets</strong>. The leaders (Arm, Synopsys, Cadence) have created deep, defensible moats, making the sector a strategic linchpin for all modern technology.</p>
@@ -907,4 +907,3 @@ body {
 
 </body>
 </html>
-
