--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <p class="mt-3 text-slate-400">Navigating the Next Wave of Growth: A Visual Report on Key Trends, Players, and Investment Opportunities.</p>
                     </div>
                     <div class="p-6 bg-slate-800 rounded-b-2xl">
-                        <a href="./semi-growthopp.html" class="inline-block w-full text-center bg-accent text-white font-bold py-3 px-6 rounded-lg hover:bg-blue-500 transition-colors duration-300">
+                        <a href="https://gemini.google.com/share/cc01ad905cdd" class="inline-block w-full text-center bg-accent text-white font-bold py-3 px-6 rounded-lg hover:bg-blue-500 transition-colors duration-300">
                             View Presentation
                         </a>
                     </div>
