--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
                     </div>
                 </div>
 
-                <!-- Card 3: Silicon IP Ecosystem research Infographic -->
+                <!-- Card 3: Silicon IP Ecosystem research Infographic https://gemini.google.com/share/cc01ad905cdd-->
                 <div class="card rounded-2xl flex flex-col">
                     <div class="p-8 flex-grow">
                         <h2 class="text-2xl font-bold text-white">Silicon IP Ecosystem </h2>
                         <p class="mt-3 text-slate-400">A Strategic Analysis of Silicon IP Ecosystem: Key Players, Design Impacts, Future Trends, and Investment Opportunities.</p>
                     </div>
                     <div class="p-6 bg-slate-800 rounded-b-2xl">
-                        <a href="https://gemini.google.com/share/cc01ad905cdd" class="inline-block w-full text-center bg-accent text-white font-bold py-3 px-6 rounded-lg hover:bg-blue-500 transition-colors duration-300">
+                        <a href="./silicon-IPs.html" class="inline-block w-full text-center bg-accent text-white font-bold py-3 px-6 rounded-lg hover:bg-blue-500 transition-colors duration-300">
                             View Presentation
                         </a>
                     </div>
