--- a/silicon-IPs.html
+++ b/silicon-IPs.html
@@ -538,6 +538,7 @@ body {
         <!-- This slide uses the background image from the image retrieval -->
         <h1 style="background-image: linear-gradient(to right, #00aaff, #00f0c0); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">Silicon IP Ecosystem Analysis</h1>
         <p class="subtitle">The Essential Building Blocks of the Semiconductor Industry</p>
+        <p class="subtitle">Kersam Liu 2025</p>
     </div>
     <!-- FIXED: Replaced external placeholder with a properly URL-encoded inline SVG data URI -->
     <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-image: linear-gradient(rgba(13, 17, 23, 0.7), rgba(13, 17, 23, 1)), url(&quot;data:image/svg+xml,%3Csvg width='1280' height='720' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='1280' height='720' fill='%230d1117'/%3E%3Ctext x='50%' y='50%' dominant-baseline='middle' text-anchor='middle' font-family='Lato, sans-serif' font-size='70px' fill='%23333'%3ESemiconductor Wafer%3C/text%3E%3C/svg%3E&quot;); background-size: cover; background-position: center; z-index: 0; opacity: 0.8;"></div>
